--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 debug/
 target/
 
+# uma directories
+project_graph_data/
+
+# uma files
+uma.toml
+uma.log
+
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 Cargo.lock
